# BinPackage

./: .gitignore  LICENSE  MANIFEST.in  README.md  build_wheels.sh  pyproject.toml  release.sh  setup.py  wheels.sh
.claude/: settings.local.json
.github/workflows/: python-package.yml  wheels.yml
cpp_port/: CMakeLists.txt  Config.cmake.in  IMPLEMENTATION_NOTES.md  README.md  SUMMARY.md  build.sh  test_mapping
cpp_port/include/: islenska.h
cpp_port/src/: dawg.cpp  islenska.cpp  islenska_impl.h  lookup.cpp  variants.cpp
cpp_port/test/: test_lookup.cpp  test_variants.cpp
old/: build_wheels.sh
src/islenska/: __init__.py  basics.py  bin.cpp  bin.h  bin_build.py  bincompress.py  bindb.py  dawgdictionary.py  settings.py
src/islenska/config/: Adjectives.conf  BinErrata.conf  BinPackage.conf  Prefs.conf
src/islenska/resources/: mark_order.csv  ord.add.csv  ord.auka.csv  ord.suffixes.csv  systematic_additions.csv
test/: test_bin.py  test_ord.py
tools/: binpack.py  dawgbuilder.py
